# gas-station

./: .ansible-lint  .blueprint.json  .cspell.json  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  .mdlrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .start.sh  .vale.ini  .yamllint  =1.8.0  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  LICENSE.liquid  MOLECULE.md  README.md  TODO.md  Taskfile.yml  Taskfile.yml.liquid  Vagrantfile  after_reboot.yml  ansible.cfg  debug.yml  dev-setup.sh  files  freeipa.yml  group_vars  host_vars  hosts.ini  init.sh  init.yml  install.txt  inventories  (+39 more)
.config/: Brewfile  common-keywords.json  log  (+6 more)
roles/applications/androidstudio/: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  README.md  Taskfile.yml  blueprint.json  blueprint.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.yml  start.sh  update.sh
roles/applications/androidstudio/.config/: log  variables.json
roles/applications/androidstudio/.config/docs/: Taskfile.yml.liquid
roles/applications/androidstudio/.config/husky/: prepare-commit-msg
roles/applications/androidstudio/.config/prompts/: package.js
roles/applications/androidstudio/.config/scripts/: start.sh
roles/applications/androidstudio/.config/scripts/lib/: package.sh
roles/applications/androidstudio/.config/taskfiles/ansible/: Taskfile-ansibler.yml  Taskfile-populate.yml  Taskfile-test.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/boilerplate/: Taskfile-populate.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/common/: Taskfile-update.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/docker/: Taskfile-build.yml  Taskfile-test.yml  Taskfile-update.yml
roles/applications/androidstudio/.config/taskfiles/fix/: Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/git/: Taskfile-gitlab.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/install/: Taskfile-github.yml  Taskfile-go.yml  Taskfile-npm.yml  Taskfile-python.yml  Taskfile-software.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/lint/: Taskfile-esprint.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/npm/: Taskfile-doc.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/packer/: Taskfile-build.yml
roles/applications/androidstudio/.config/taskfiles/publish/: Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/release/: Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/security/: Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/upstream/: Taskfile-common.yml  Taskfile-commondocs.yml  Taskfile.yml
roles/applications/androidstudio/.config/taskfiles/vscode/: Taskfile.yml
roles/applications/androidstudio/.gitlab/ci/lint/: gitlab-ci-lint.gitlab-ci.yml  hadolint.gitlab-ci.yml  prettier.gitlab-ci.yml
roles/applications/androidstudio/.gitlab/ci/scripts/: update-init.sh
roles/applications/androidstudio/.gitlab/ci/update/: common.gitlab-ci.yml
roles/applications/androidstudio/defaults/: main.yml
roles/applications/androidstudio/docs/: CONTRIBUTING.md
roles/applications/androidstudio/local/: package-lock.json
roles/applications/androidstudio/meta/: main.yml
roles/applications/androidstudio/molecule/: converge.yml
roles/applications/androidstudio/molecule/.results/: 2021-08-03-docker-snap.txt  2021-08-05-docker-snap.txt
roles/applications/androidstudio/molecule/.results/junit/: vagrant.destroy-1641353297.559923.xml
roles/applications/androidstudio/molecule/.results/logs/: 2022-01-04-default.txt  2022-02-24-default.txt
roles/applications/androidstudio/molecule/default/: converge.yml  molecule.yml  playbook.yml
roles/applications/androidstudio/molecule/desktop/: molecule.yml
roles/applications/androidstudio/molecule/desktop-archlinux/: molecule.yml
roles/applications/androidstudio/molecule/desktop-ubuntu/: molecule.yml
roles/applications/androidstudio/tasks/: install-Darwin.yml  install-Linux.yml  install-Windows.yml  main.yml  user-Linux.yml  user-Windows.yml
roles/applications/androidstudio/test/windows/: test.yml
roles/applications/androidstudio/tests/: test.yml
roles/applications/androidstudio/vars/: Darwin.yml  Windows.yml  main.yml
roles/system/dotfiles/: .blueprint.json  .gitlab-ci.yml  .gitrepo  .travis.yml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.yml
roles/system/dotfiles/.config/: variables.json
roles/system/dotfiles/.config/docs/readme-playbook/: quick-start.md
roles/system/dotfiles/.config/taskfiles/git/: Taskfile.yml
roles/system/dotfiles/defaults/: main.yml
roles/system/dotfiles/docs/: CONTRIBUTING.md
roles/system/dotfiles/files/: .hyper.js  .localrc  .osx  .zshrc
roles/system/dotfiles/handlers/: main.yml
roles/system/dotfiles/local/: package-lock.json
roles/system/dotfiles/meta/: main.yml
roles/system/dotfiles/molecule/: converge.yml
roles/system/dotfiles/molecule/default/: converge.yml
roles/system/dotfiles/molecule/docker/: converge.yml
roles/system/dotfiles/molecule/virtualbox/: converge.yml
roles/system/dotfiles/tasks/: main.yml  user-Linux.yml  user-Windows.yml  user-continue.yml
roles/system/dotfiles/templates/: .gitconfig.j2  .netrc.j2  .npmrc.j2  .tinypng.j2
roles/system/dotfiles/tests/: test.yml
roles/system/dotfiles/vars/: Archlinux.yml  RedHat.yml  Windows.yml  main.yml
roles/system/homebrew/: .gitignore  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml
roles/system/homebrew/defaults/: main.yml
roles/system/homebrew/docs/: CONTRIBUTING.md
roles/system/homebrew/meta/: main.yml
roles/system/homebrew/molecule/: converge.yml
roles/system/homebrew/molecule/docker-debian/: converge.yml
roles/system/homebrew/tasks/: bashrc-Linux.yml  continue.yml  install-Darwin.yml  install-Linux.yml  main.yml
roles/system/homebrew/test/darwin/: test.yml
roles/system/homebrew/test/windows/: test.yml
roles/system/homebrew/vars/: main.yml
(+9530 files in other folders)
