[tool.poetry]
name = "ansible-androidstudio"
version = "1.1.14"
description = "Installs Android Studio and sets up Android SDKs on nearly any OS"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/ansible/roles"
keywords = ["adb", "android", "androidsdk", "androidstudio", "ansible", "ansible-role", "apps", "archlinux", "awesome", "centos", "debian", "desktop", "development", "doctor", "fedora", "google", "ide", "install", "installdoc", "installdoctor", "java", "macos", "mblabs", "megabytelabs", "molecule", "npm", "package", "platformtools", "professormanhattan", "role", "snap", "ubuntu", "washingtondc", "windows"]
include = ["CHANGELOG.md", "LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Framework :: Ansible",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Other",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: Desktop Environment",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"
ansible = "^4.8.0"
docker = "^5.0.3"
python-vagrant = "^0.5.15"
pywinrm = ">=0.3.0"

[tool.poetry.dev-dependencies]
ansible-lint = "<5.0.0"
ansibler = "^0.1.14"
black = "^21.10b0"
blocklint = "^0.2.3"
flake8 = "^4.0.1"
mod-ansible-autodoc = "^0.5.7"
molecule = "^3.5.2"
molecule-docker = "^1.1.0"
molecule-vagrant = "^0.6.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
yamllint = "^1.26.3"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/ansible-roles/androidstudio/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/ansible-androidstudio"
"GitLab" = "https://gitlab.com/megabyte-labs/ansible-roles/androidstudio"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"
"Give Directly" = "https://givedirectly.org"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
