[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Brian Zalewski <brian@megabyte.space>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Framework :: Ansible",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Other",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: Desktop Environment",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities"
]
description = "Adds a sweet set of dotfiles to your home directories"
documentation = "https://megabyte.space/docs/ansible/roles"
homepage = "https://megabyte.space"
include = ["CHANGELOG.md", "LICENSE"]
keywords = [
  "adb",
  "android",
  "androidsdk",
  "androidstudio",
  "ansible",
  "ansible-role",
  "apps",
  "archlinux",
  "awesome",
  "centos",
  "debian",
  "desktop",
  "development",
  "doctor",
  "fedora",
  "firefox",
  "gnome",
  "google",
  "ide",
  "install",
  "installdoc",
  "installdoctor",
  "java",
  "kde",
  "macos",
  "mblabs",
  "megabytelabs",
  "molecule",
  "npm",
  "package",
  "platformtools",
  "professormanhattan",
  "role",
  "snap",
  "sweet",
  "theme",
  "ubuntu",
  "washingtondc",
  "windows",
  "xfce"
]
license = "MIT"
name = "ansible-dotfiles"
readme = "README.md"
version = "1.1.14"

[tool.poetry.dependencies]
ansible-core = "^2.11.3"
ansible-lint = { version = "<5.0.0", optional = true }
ansibler = { version = "*", optional = true }
black = { version = "^21.10b0", optional = true }
blocklint = { version = "^0.2.3", optional = true }
docker = "^5.0.3"
flake8 = { version = "^4.0.1", optional = true }
mod-ansible-autodoc = { version = "*", optional = true }
pip = { version = "^21.3.0", optional = true }
pre-commit-hooks = { version = "^4.0.1", optional = true }
proselint = { version = "^0.12.0", optional = true }
python = ">=3.7.2,<4.0.0"
python-vagrant = "^0.5.15"
pywinrm = ">=0.3.0"
requests-credssp = "^2.0.0"
setuptools = { version = "^58.2.0", optional = true }
toml-sort = { version = "^0.19.0", optional = true }
twine = { version = "^3.8.0", optional = true }
wheel = { version = "^0.37.1", optional = true }
yamllint = { version = "^1.26.3", optional = true }

[tool.poetry.dev-dependencies]
apache-libcloud = "^3.4.1"
gcloud = "^0.18.3"
junit-xml = "^1.9"
molecule = "^3.5.2"
molecule-docker = "^1.1.0"
molecule-gce = "^0.3.1"
molecule-vagrant = "^0.6.3"
pycrypto = "^2.6.1"

[tool.poetry.extras]
cli = [
  "ansible-lint",
  "ansibler",
  "black",
  "blocklint",
  "flake8",
  "mod-ansible-autodoc",
  "pre-commit-hooks",
  "proselint",
  "toml-sort",
  "yamllint"
]
semantic = ["pip", "setuptools", "twine", "wheel"]

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/ansible-roles/dotfiles/-/issues"
GitHub = "https://github.com/megabyte-labs/ansible-dotfiles"
GitLab = "https://gitlab.com/megabyte-labs/ansible-roles/dotfiles"
"Give Directly" = "https://givedirectly.org"
"Open Collective" = "https://opencollective.com/megabytelabs"
Patreon = "https://www.patreon.com/ProfessorManhattan"
